--- a/CC_30/style.css
+++ b/CC_30/style.css
@@ -1,15 +1,50 @@
-.hud {
+body {
+  background: rgb(150, 255, 150);
+}
+
+/* reset button color defaults */
+button, button:active, button:focus, button:hover {
+  color:#134703
+}
+
+h2 {
+  margin: 0;
+  font-family: monospace;
+  font-weight: lighter;
+}
+
+#click-away {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.25);
+  z-index: 0;
+  /* filter blur background */
+  /* backdrop-filter: blur(2px); */
+}
+
+.range-ends {
+  font-size: .8rem;
   display: flex;
   justify-content: space-between;
-  align-items: start;
-  padding: 25px;
-  max-width: 600px;
-  margin: 25px auto 15px;
+  align-items: center;
 }
 
 
+.hud {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  padding: 15px;
+  max-width: 600px;
+  margin: 10px auto 15px;
+}
 
-.settings-wrapper, #start {
+.settings-wrapper, #start, .download {
   border: 2px solid #134703;
   background: rgb(150, 255, 150);
   width: max-content;
@@ -20,7 +55,7 @@
 .settings-wrapper {
   padding: 4px 5px 0;
 }
-#start, .title {
+#start, .title, .download {
   padding: 2px 5px;
   font-weight: bold;
   font-family: monospace;
@@ -32,7 +67,7 @@
   font-weight: lighter;
   text-decoration: underline;
 }
-.settings-wrapper:hover, #start:hover {
+.settings-wrapper:hover, #start:hover, .download:hover {
   box-shadow: 0 2px 3px #13470350;
   background-color: rgb(130, 253, 130);
 }
@@ -42,14 +77,15 @@
 }
 
 .ctr-panel {
-  border: 2px solid rgb(10, 54, 9);
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  padding: 5px;
-  border-radius: 8px;
-  box-shadow: 0 0 5px black;
   background-color: rgb(187, 255, 187);
+  border: 2px solid rgb(10, 54, 9);
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+  padding: 7px;
+  position: absolute;
+  right: 16px;
+  top: 62px;
+  transition: all .2s ease;
 }
 
 .slider-wrapper {
@@ -59,11 +95,41 @@
 }
 
 .btn-start {
+  position:absolute;
+  z-index: 9999;
   background: white;
   cursor: pointer;
 }
-
 .btn-start:hover {
   background: #e0fc46;
   color: #333;
+}
+
+.btns-wrap {
+  margin: 10px 0 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.btn-default, .btn-save {
+  cursor: pointer;
+}
+
+#canvas-wrapper {
+  background: rgb(150, 255, 150);
+}
+
+.download {
+  display: none;
+  width: max-content;
+  margin: 25px auto;
+}
+
+@media only screen and (min-width: 600px) {
+  .hud {
+    padding: 25px;
+    margin: 25px auto 15px;
+  }
 }
