--- a/grand-hotel/styles.css
+++ b/grand-hotel/styles.css
@@ -6,10 +6,11 @@ body, html {
   overflow: hidden;
   background: rgb(150, 225, 255);
 }
+
 .hud-wrapper {
-top: 10px;
-left: 10px;
-position: absolute;
+  top: 10px;
+  left: 10px;
+  position: absolute;
 }
 
 .container {
@@ -28,21 +29,16 @@ position: absolute;
   width: min-content;
 }
 
+#canvas-wrapper {
+  width: min-content;
+  height: min-content;
+}
+
 .lobby {
   width: 100%;
   height: 50px;
   background:  rgb(241,87,88);
 }
-
-
-#canvas-wrapper {
-/* border:3px solid red; */
-width:min-content;
-height: min-content;
-/* margin-bottom: -9px; */
-/* border: 5px solid rgb(241,87,88); */
-}
-
 
 .ground {
   width: 100%; 
@@ -50,11 +46,12 @@ height: min-content;
   background: rgb(154, 221, 78); 
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   flex-grow: 1;
 }
 
 .ground input {
+  margin-top: 40px;
   transform: rotate(180deg);
 }
 
@@ -78,13 +75,6 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
   margin: -4px 0; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
   box-shadow: 0px -1px 4px #0000007c, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
-}
-
-
-
-
-button {
-cursor: pointer;
 }
 
 /* 'xs': '425px' */
