--- a/waves/waves.css
+++ b/waves/waves.css
@@ -3,3 +3,49 @@ body {
   padding: 0;
   background: #EEE;
 }
+
+
+.dg {
+  font-family: monospace;
+}
+
+.dg li.title {
+  margin-left: 0;
+  padding-left: 20px;
+  border-radius: 20px 20px 0 0;
+  border: 1px solid rgb(64, 212, 27);
+}
+
+.dg.main .close-button {
+  border-radius: 20px;
+  border: 1px solid rgb(64, 212, 27);
+  margin: 0px auto 0;
+}
+
+.dg.main.a{
+  margin-top: 5px;
+  border-radius: 20px;
+  background: rgb(43, 43, 43);
+  padding: 10px 10px 30px 10px;
+}
+
+.dg ul {
+  margin-bottom: 10px;
+}
+
+ul.closed {
+  margin-bottom: 0;
+}
+
+
+.dg .cr.number {
+  border-left: 3px solid rgb(64, 212, 27);
+}
+
+.slider-fg {
+  background: rgb(64, 212, 27)  !important;
+}
+
+.dg .cr.number input[type=text] {
+ color:rgb(64, 212, 27) !important;
+}
